# lab

./: deploy.yaml  nginx.yaml
crew/poem_writer/: README.md  pyproject.toml
crew/poem_writer/knowledge/: user_preference.txt
crew/poem_writer/src/poem_writer/: crew.py  main.py
crew/poem_writer/src/poem_writer/config/: agents.yaml  tasks.yaml
